Upgrade to Java 14, Gradle 6.3 and Spring Boot 2.2.6. Changed från Eclipse to Visual Studio Code.