@@ -1,5 +1,5 @@
 package se.leafcoders.rosette;
 
 public class IdResult {
-    public Long id = new Long(0);
+    public Long id = Long.valueOf(0);
 }
